--- a/PROJ631_HuffmanCompression/MainWindow.xaml
+++ b/PROJ631_HuffmanCompression/MainWindow.xaml
@@ -20,6 +20,11 @@
     </Window.InputBindings>
     <DockPanel>
         <Menu DockPanel.Dock="Top">
+            <Menu.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <DockPanel HorizontalAlignment="Stretch"/>
+                </ItemsPanelTemplate>
+            </Menu.ItemsPanel>
             <MenuItem Header="File">
                 <MenuItem Header="_New" Command="New" InputGestureText="Ctrl+N"/>
                 <MenuItem Header="_Open" Command="Open" InputGestureText="Ctrl+O"/>
@@ -30,6 +35,9 @@
             <MenuItem Header="Action">
                 <MenuItem Header="_Compress" Command="local:MainWindow.Compress" InputGestureText="Alt+C"/>
                 <MenuItem Header="_Decompress" Command="local:MainWindow.Decompress" InputGestureText="Alt+D"/>
+            </MenuItem>
+            <MenuItem Header="Debug" HorizontalAlignment="Right">
+                <MenuItem Header="Graph" Click="DebugGraph_OnClick"/>
             </MenuItem>
         </Menu>
         <Grid Margin="10">
